<resources>
    <string name="app_name">Bell Budget App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="furniture_button">Furniture</string>
    <string name="construction_button">Construction</string>
    <string name="settings_button">Settings</string>
    <string name="diy_button">D.I.Y. Recipes</string>
    <string name="clothing_button">Clothing</string>
    <string name="title_activity_construction">ConstructionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Bridge Buttons -->
    <string name="log_bridge_button">Log Bridge</string>
    <string name="suspension_bridge_button">Suspension Bridge</string>
    <string name="wooden_bridge_button">Wooden Bridge</string>
    <string name="stone_bridge_button">Stone Bridge</string>
    <string name="brick_bridge_button">Brick Bridge</string>
    <string name="zen_bridge_button">Zen Bridge</string>
    <string name="red_zen_button">Red Zen Bridge</string>
    <string name="iron_button">Iron Bridge</string>
    <!-- Mile Furniture Buttons -->
    <string name="construction_sign_btn">Construction sign</string>
    <string name="lifeguard_chair_btn">Lifeguard chair</string>
    <string name="portable_toilet_btn">Portable toilet</string>
    <string name="streetlamp_btn">Streetlamp</string>
    <string name="utility_pole_btn">Utility Pole</string>
    <string name="drink_machine_btn">Drink Machine</string>
    <string name="public_bench_btn">Public bench</string>
    <string name="snack_machine_btn">Snack Machine</string>
    <string name="springy_btn">Springy ride-on</string>
    <string name="tourist_telescope_btn">Tourist telescope</string>
    <string name="park_clock_btn">Park clock</string>
    <string name="phone_box_btn">Phone box</string>
    <string name="sandbox_btn">Sandbox</string>
    <string name="cotton_candy_btn">Cotton-candy stall</string>
    <string name="playground_btn">Playground gym</string>
    <string name="parabolic_btn">Parabolic antenna</string>
    <string name="soccer_goal">Soccer goal</string>
    <string name="solar_btn">Solar panel</string>
    <string name="wind_turbine_btn">Wind turbine</string>
    <string name="lighthouse_btn">Lighthouse</string>
    <string name="monster_btn">Monster statue</string>
    <string name="pool_button">Pool</string>
    <string name="teacup_btn">Teacup ride</string>
    <!-- Recipe Buttons -->
    <string name="fence_btn">Fence recipe</string>
    <string name="drinking_btn">Drinking Fountain recipe</string>
    <string name="manhole_btn">Manhole cover recipe</string>
    <string name="stone_btn">Stone tablet recipe</string>
    <string name="destinations_btn">Destination signpost recipe</string>
    <string name="wave_btn">Wave breaker recipe</string>
    <string name="brick_btn">Brick well recipe</string>
    <string name="simple_well_btn">Simple well recipe</string>
    <string name="stall_btn">Stall recipe</string>
    <string name="stone_arch_btn">Stone arch recipe</string>
    <string name="fountain_btn">Fountain recipe</string>
    <string name="outdoor_btn">Outdoor bath recipe</string>
    <string name="silo_btn">silo recipe</string>
    <string name="robot_btn">Robot hero recipe</string>
    <!-- Labels for Buttons -->
    <string name="bell_label">Bells</string>
    <string name="mile_label">Miles</string>
</resources>